product showcase model chaged

--- a/Palm Flowers.html
+++ b/Palm Flowers.html
@@ -33,7 +33,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></a>
+        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a>
       </nav>
       <nav class="nav2">
         <ul class="ul2">
@@ -55,98 +55,132 @@
     <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
       <div class="row mb-3" >
         <div class="col-sm-12 " >
-          <div class="card-group" >
-            <div class="card col-sm-4 col-lg-2 card2sty" >
-              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; height: 100%; width: 100%; " alt="lap1" class="image-fluid">
-              <h4 class="card-title cd-title">##</h4>
-              <div class="card-body cd-txt">
-                <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-              </div>
+          <h4 class="cd-h4 mt-3 mb-3">Palm Flowers</h4>
+          <div class="product-container">
+            <div class="product-box">
+                <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+                <div class="product-info">
+                    <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                    <span class="price">$29.99</span>
+                    <button class="buy-button">Buy Now</button>
+                </div>
             </div>
-            <div class="card col-sm-4 col-lg-2 card2sty" >
-              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap2" class="image-fluid">
-              <h4 class="card-title cd-title">Acer</h4>
-              <div class="card-body cd-txt">
-                <p class="card-text txt-sz"></p>
-               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-              </div>
+            <div class="product-box">
+                <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+                <div class="product-info">
+                    <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                    <span class="price">$34.50</span>
+                    <button class="buy-button">Buy Now</button>
+                </div>
             </div>
-            <div class="card col-sm-4 col-lg-2 card2sty" >
-              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap3" class="image-fluid">
-              <h4 class="card-title cd-title">##</h4>
-              <div class="card-body cd-txt">
-                <p class="card-text txt-sz"></p>
-               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-              </div>
+            <div class="product-box">
+                <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+                <div class="product-info">
+                    <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                    <span class="price">$19.95</span>
+                    <button class="buy-button">Buy Now</button>
+                </div>
             </div>
-            <div class="card col-sm-4 col-lg-2 card2sty" >
-              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
-              <h4 class="card-title cd-title">##</h4>
-              <div class="card-body cd-txt">
-                <p class="card-text txt-sz"></p>
-               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-              </div>
-            </div>   
-            <div class="card col-sm-4 col-lg-2 card2sty" >
-              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
-              <h4 class="card-title cd-title">##</h4>
-              <div class="card-body cd-txt">
-                <p class="card-text txt-sz"></p>
-               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-              </div>
-            </div>  
-          </div>
+            </div>
+        </div>
+        </div>
+      </div>
+      <div class="row mb-3" >
+        <div class="col-sm-12 " >
+          <div class="product-container">
+            <div class="product-box">
+                <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+                <div class="product-info">
+                    <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                    <span class="price">$29.99</span>
+                    <button class="buy-button">Buy Now</button>
+                </div>
+            </div>
+            <div class="product-box">
+                <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+                <div class="product-info">
+                    <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                    <span class="price">$34.50</span>
+                    <button class="buy-button">Buy Now</button>
+                </div>
+            </div>
+            <div class="product-box">
+                <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+                <div class="product-info">
+                    <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                    <span class="price">$19.95</span>
+                    <button class="buy-button">Buy Now</button>
+                </div>
+            </div>
+            </div>
+        </div>
         </div>
       </div>
     </div>
-  
   <!------------------------------------------------------Product row 1---------------------------------------------------->
 
    <!------------------------------------------------------Product row2---------------------------------------------------->
    <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
     <div class="row mb-3" >
       <div class="col-sm-12 " >
-        <div class="card-group" >
-          <div class="card col-sm-4 col-lg-2 card2sty" >
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; height: 100%; width: 100%; " alt="lap1" class="image-fluid">
-            <h4 class="card-title cd-title">##</h4>
-            <div class="card-body cd-txt">
-              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
+        <div class="product-container">
+          <div class="product-box">
+              <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+              <div class="product-info">
+                  <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                  <span class="price">$29.99</span>
+                  <button class="buy-button">Buy Now</button>
+              </div>
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" >
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap2" class="image-fluid">
-            <h4 class="card-title cd-title">Acer</h4>
-            <div class="card-body cd-txt">
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
+          <div class="product-box">
+              <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+              <div class="product-info">
+                  <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                  <span class="price">$34.50</span>
+                  <button class="buy-button">Buy Now</button>
+              </div>
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" >
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap3" class="image-fluid">
-            <h4 class="card-title cd-title">##</h4>
-            <div class="card-body cd-txt">
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
+          <div class="product-box">
+              <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+              <div class="product-info">
+                  <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                  <span class="price">$19.95</span>
+                  <button class="buy-button">Buy Now</button>
+              </div>
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" >
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
-            <h4 class="card-title cd-title">##</h4>
-            <div class="card-body cd-txt">
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>   
-          <div class="card col-sm-4 col-lg-2 card2sty" >
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
-            <h4 class="card-title cd-title">##</h4>
-            <div class="card-body cd-txt">
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>  
-        </div>
+          </div>
+      </div>
+      </div>
+    </div>
+    <div class="row mb-3" >
+      <div class="col-sm-12 " >
+        <div class="product-container">
+          <div class="product-box">
+              <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+              <div class="product-info">
+                  <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                  <span class="price">$29.99</span>
+                  <button class="buy-button">Buy Now</button>
+              </div>
+          </div>
+          <div class="product-box">
+              <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+              <div class="product-info">
+                  <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                  <span class="price">$34.50</span>
+                  <button class="buy-button">Buy Now</button>
+              </div>
+          </div>
+          <div class="product-box">
+              <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+              <div class="product-info">
+                  <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                  <span class="price">$19.95</span>
+                  <button class="buy-button">Buy Now</button>
+              </div>
+          </div>
+          </div>
+      </div>
       </div>
     </div>
   </div>
