--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></a>
+        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a>
       </nav>
       <nav class="nav2">
         <ul class="ul2">
@@ -49,7 +49,7 @@
         </ul>
       </nav>
 <!------------------------------------------------------Header---------------------------------------------------->
-<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></h3>
+<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></h3>
 <p>Hopeshore Special School located at Kadalundi was founded with the noble objective 
     of empowering the children with special needs who are sidelined from the mainstream of 
     society. The school provides education and therapy to specially-abled children hailing from 
