--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></a>
+        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a>
       </nav>
       <nav class="nav2">
         <ul class="ul2">
@@ -85,119 +85,68 @@
 <!------------------------------------------------------Carousel---------------------------------------------------->
 
 <!------------------------------------------------------Cards---------------------------------------------------->
-<h4 class="cd-h4 mt-2 mb-2">Popular Collections</h4>
-<div class="container-fluid pt-2pb-2" style="background-color:#ffffff; border-bottom:0px solid rgba(255, 0, 0, 0);">
-  <div class="row">
-    <div class="col-sm-12">
-      <div id="inm" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container">
-              <div class="row">
-                  <div class="col-sm-6 col-lg-3">
-                    <div class="card"  id="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.jpg"  class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%;"> 
-                      <!-- <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.jpg"  class="img-fluid" alt="card1" style="border-radius: 50px;  width: 40%; height: 50%;">  -->
-                      <div class="card-body">
-                          <h4 class="card-title">Detol Soap</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-3 mm">
-                    <div class="card" id="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; margin: 0;">
-                        <div class="card-body">
-                          <h4 class="card-title">Pampers</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>  
-                  <div class="col-sm-6 col-lg-3 mm">
-                    <div class="card" id="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
-                        <div class="card-body">
-                          <h4 class="card-title">Keyboard</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>   
-                  <div class="col-sm-6 col-lg-3 mm">
-                    <div class="card" id="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.21_d50d448f.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
-                        <div class="card-body">
-                          <h4 class="card-title">Detol Handwash</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div> 
-                                   
-              </div>
+<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
+  <div class="row mb-3" >
+    <div class="col-sm-12 " >
+      <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
+      <div class="product-container">
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <div class="product-info">
+                <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                <span class="price">$29.99</span>
+                <button class="buy-button">Buy Now</button>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row">
-                  <div class="col-sm-6 col-lg-3">
-                    <div class="card" id="card" >
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
-                        <div class="card-body">
-                          <h4 class="card-title">Freedom Oil</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-3">
-                    <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.20_5c013741.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
-                        <div class="card-body">
-                          <h4 class="card-title">Cpu Cabinet</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>  
-                  <div class="col-sm-6 col-lg-3">
-                    <div class="card" id="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.22_9c3d2dce.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
-                        <div class="card-body">
-                          <h4 class="card-title">Pampers</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>   
-                  <div class="col-sm-6 col-lg-3">
-                    <div class="card" id="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.14_d144d3b4.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
-                        <div class="card-body">
-                          <h4 class="card-title">Keyboard</h4>
-                          <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
-                        </div>
-                    </div>
-                  </div>                  
-              </div>
-            </div>
-          </div>
-
-          
         </div>
-        <a class="carousel-control-prev" style="margin-left:20px; width:50px;" href="#inm" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon card-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" style="margin-right:20px; width:50px;" href="#inm" role="button" data-slide="next">
-          <span class="carousel-control-next-icon card-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-
-      </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <div class="product-info">
+                <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                <span class="price">$34.50</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <div class="product-info">
+                <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                <span class="price">$19.95</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+  </div>
+  <div class="row mb-3" >
+    <div class="col-sm-12 " >
+      <div class="product-container">
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <div class="product-info">
+                <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                <span class="price">$29.99</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <div class="product-info">
+                <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                <span class="price">$34.50</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <div class="product-info">
+                <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                <span class="price">$19.95</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        </div>
+    </div>
     </div>
   </div>
 </div>
@@ -215,47 +164,64 @@
   <div class="row mb-3" >
     <div class="col-sm-12 " >
       <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
-      <div class="card-group" >
-        <div class="card col-sm-4 col-lg-2 card2sty" >
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; height: 100%; width: 100%; " alt="lap1" class="image-fluid">
-          <h4 class="card-title cd-title">##</h4>
-          <div class="card-body cd-txt">
-            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-          </div>
+      <div class="product-container">
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <div class="product-info">
+                <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                <span class="price">$29.99</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap2" class="image-fluid">
-          <h4 class="card-title cd-title">Acer</h4>
-          <div class="card-body cd-txt">
-            <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-          </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <div class="product-info">
+                <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                <span class="price">$34.50</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap3" class="image-fluid">
-          <h4 class="card-title cd-title">##</h4>
-          <div class="card-body cd-txt">
-            <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-          </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <div class="product-info">
+                <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                <span class="price">$19.95</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
-          <h4 class="card-title cd-title">##</h4>
-          <div class="card-body cd-txt">
-            <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-          </div>
-        </div>   
-        <div class="card col-sm-4 col-lg-2 card2sty" >
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
-          <h4 class="card-title cd-title">##</h4>
-          <div class="card-body cd-txt">
-            <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-          </div>
-        </div>  
-      </div>
+        </div>
+    </div>
+    </div>
+  </div>
+  <div class="row mb-3" >
+    <div class="col-sm-12 " >
+      <div class="product-container">
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <div class="product-info">
+                <span class="rating">4.5 <i class="fas fa-star"></i></span>
+                <span class="price">$29.99</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <div class="product-info">
+                <span class="rating">4.2 <i class="fas fa-star"></i></span>
+                <span class="price">$34.50</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        <div class="product-box">
+            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <div class="product-info">
+                <span class="rating">4.8 <i class="fas fa-star"></i></span>
+                <span class="price">$19.95</span>
+                <button class="buy-button">Buy Now</button>
+            </div>
+        </div>
+        </div>
+    </div>
     </div>
   </div>
 </div>
