moblie repon 3 add 2 box in each row add link in button

--- a/index.html
+++ b/index.html
@@ -94,26 +94,37 @@
             <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
-                <span class="price">$29.99</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$29.99</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
             <div class="product-info">
                 <span class="rating">4.2 <i class="fas fa-star"></i></span>
-                <span class="price">$34.50</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$34.50</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
             <div class="product-info">
                 <span class="rating">4.8 <i class="fas fa-star"></i></span>
-                <span class="price">$19.95</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$19.95</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
+        <div class="product-box">
+          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <div class="product-info">
+              <span class="rating">4.5 <i class="fas fa-star"></i></span>
+              <span class="price">$29.99</span><br>
+              <p>##</p>
+              <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
+          </div>
         </div>
     </div>
     </div>
@@ -125,26 +136,37 @@
             <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
-                <span class="price">$29.99</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$29.99</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
             <div class="product-info">
                 <span class="rating">4.2 <i class="fas fa-star"></i></span>
-                <span class="price">$34.50</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$34.50</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
             <div class="product-info">
                 <span class="rating">4.8 <i class="fas fa-star"></i></span>
-                <span class="price">$19.95</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$19.95</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
+        <div class="product-box">
+          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <div class="product-info">
+              <span class="rating">4.5 <i class="fas fa-star"></i></span>
+              <span class="price">$29.99</span><br>
+              <p>##</p>
+              <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
+          </div>
         </div>
     </div>
     </div>
@@ -163,32 +185,43 @@
 <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
   <div class="row mb-3" >
     <div class="col-sm-12 " >
-      <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
+      <h4 class="cd-h4 mt-3 mb-3">All Products</h4>
       <div class="product-container">
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
-                <span class="price">$29.99</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$29.99</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
             <div class="product-info">
                 <span class="rating">4.2 <i class="fas fa-star"></i></span>
-                <span class="price">$34.50</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$34.50</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
             <div class="product-info">
                 <span class="rating">4.8 <i class="fas fa-star"></i></span>
-                <span class="price">$19.95</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$19.95</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
+        <div class="product-box">
+          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <div class="product-info">
+              <span class="rating">4.5 <i class="fas fa-star"></i></span>
+              <span class="price">$29.99</span><br>
+              <p>##</p>
+              <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
+          </div>
         </div>
     </div>
     </div>
@@ -200,26 +233,37 @@
             <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
-                <span class="price">$29.99</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$29.99</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
             <div class="product-info">
                 <span class="rating">4.2 <i class="fas fa-star"></i></span>
-                <span class="price">$34.50</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$34.50</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
         <div class="product-box">
             <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
             <div class="product-info">
                 <span class="rating">4.8 <i class="fas fa-star"></i></span>
-                <span class="price">$19.95</span>
-                <button class="buy-button">Buy Now</button>
+                <span class="price">$19.95</span><br>
+                <p>##</p>
+                <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
             </div>
         </div>
+        <div class="product-box">
+          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <div class="product-info">
+              <span class="rating">4.5 <i class="fas fa-star"></i></span>
+              <span class="price">$29.99</span><br>
+              <p>##</p>
+              <a href="https://wa.link/nwpvto"><button class="buy-button" >Buy Now</button></a>
+          </div>
         </div>
     </div>
     </div>
