iphone logotext test1

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a>
+        <!-- <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a> -->
+      <img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">
       </nav>
       <nav class="nav2">
         <ul class="ul2">
