--- a/aboutus.html
+++ b/aboutus.html
@@ -221,8 +221,8 @@
 <!------------------------------------------------------Footer---------------------------------------------------->
 
 
-<script src="node_modules\jquery\dist\jquery.js"></script>
-<script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
+<script src="node_modules\jquery\dist\jquery.min.js"></script>
+<script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
 <script src="js/Script.js"></script>
 </body>
 </html>
