iphone logotext text2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
             </ul>
         </nav>
         <!-- <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a> -->
-      <img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">
+        <a class="navbar-brand" href="index.html">
+          <span id="bd-title">
+            <img src="images/logo.jpg" alt="Hopeshore Logo">
+            Hopeshore
+          </span>
+        </a>
+        
+        
       </nav>
       <nav class="nav2">
         <ul class="ul2">
