product image just changed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
       <div class="product-container">
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
           <div class="product-info">
               <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
@@ -141,7 +141,7 @@
     <div class="col-sm-12 " >
       <div class="product-container">
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
@@ -168,7 +168,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_f43b9bb7.jpg" alt="Product Image 1">
           <div class="product-info">
               <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
@@ -196,7 +196,7 @@
       <h4 class="cd-h4 mt-3 mb-3">All Products</h4>
       <div class="product-container">
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
@@ -205,7 +205,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" alt="Product Image 2">
             <div class="product-info">
                 <span class="rating">4.2 <i class="fas fa-star"></i></span>
                 <span class="price">$34.50</span><br>
@@ -214,7 +214,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" alt="Product Image 3">
             <div class="product-info">
                 <span class="rating">4.8 <i class="fas fa-star"></i></span>
                 <span class="price">$19.95</span><br>
@@ -223,7 +223,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_ad58fd6e.jpg" alt="Product Image 1">
           <div class="product-info">
               <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
@@ -238,7 +238,7 @@
     <div class="col-sm-12 " >
       <div class="product-container">
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_7e51ce81.jpg" alt="Product Image 1">
             <div class="product-info">
                 <span class="rating">4.5 <i class="fas fa-star"></i></span>
                 <span class="price">$29.99</span><br>
@@ -247,7 +247,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.15_62d41ce0.jpg" alt="Product Image 2">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" alt="Product Image 2">
             <div class="product-info">
                 <span class="rating">4.2 <i class="fas fa-star"></i></span>
                 <span class="price">$34.50</span><br>
@@ -256,7 +256,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="images/Products/WhatsApp Image 2024-04-22 at 20.30.16_a99a0b3a.jpg" alt="Product Image 3">
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" alt="Product Image 3">
             <div class="product-info">
                 <span class="rating">4.8 <i class="fas fa-star"></i></span>
                 <span class="price">$19.95</span><br>
@@ -265,7 +265,7 @@
             </div>
         </div>
         <div class="product-box">
-          <img src="images/Products/WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" alt="Product Image 1">
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" alt="Product Image 1">
           <div class="product-info">
               <span class="rating">4.5 <i class="fas fa-star"></i></span>
               <span class="price">$29.99</span><br>
