add a about sample in top of index page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 </div>
 
 <!------------------------------------------------------Carousel---------------------------------------------------->
-
+<!-- about -->
+  <p style="background-color: #F0FFFF;">"Hopeshore Special School located at Kadalundi was founded with the noble objective of empowering the children with special needs who are sidelined from the mainstream of society"<a href="aboutus.html">more</a></p>
+<!-- about -->
 <!------------------------------------------------------Cards---------------------------------------------------->
 <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
   <div class="row mb-3" >
@@ -281,7 +283,7 @@
 <!------------------------------------------------------Card2---------------------------------------------------->
 <!------------------------------------------------------Card3---------------------------------------------------->
 <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto; height: 100;"> 
-<div ></div> 
+<div></div> 
 </div>
 <!------------------------------------------------------Card3---------------------------------------------------->
 
