Change carousel and add transparent image and text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
+      <a class="navbar-brand" href="index.html">
+        <span id="bd-title">
+          <img src="images/Logo page.jpg" alt="Hopeshore Logo">
+        </span>
+      </a>
         <button id="menu-button">&#9776;</button> 
         <nav id="side-menu">
             <button id="close-button">X</button>
@@ -28,18 +33,12 @@
                 <li><a href="#">deco rose</a></li>
                 <li><a href="#">bamboo</a></li>
                 <li><a href="#">Offer Zone</a></li>
-                <li><a href="aboutus.html">About</a></li>
+                <!-- <li><a href="aboutus.html">About</a></li> -->
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <!-- <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a> -->
-        <a class="navbar-brand" href="index.html">
-          <span id="bd-title">
-            <img src="images/logo.jpg" alt="Hopeshore Logo">
-            Hopeshore
-          </span>
-        </a>
         
         
       </nav>
@@ -59,7 +58,7 @@
 <!------------------------------------------------------Header---------------------------------------------------->
 
 <!------------------------------------------------------Carousel---------------------------------------------------->
-<div id="carousel1" class="carousel slide" data-ride="carousel">
+<!-- <div id="carousel1" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carousel1" data-slide-to="0" class="active"></li>
     <li data-target="#carousel1" data-slide-to="1"></li>
@@ -88,7 +87,15 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div> -->
+<div class="image-box">
+  <img src="images/carousel slide/edit1.jpg" alt="Image description">
+  <div class="text-overlay">
+    <h2 id="banner-text">Giving your child the foundation for success. Hopeshore - A trusted name in child development in Kadalundi.</h2>
+    <div><br><br><br><button id="banner-button">Contact us</button></div>
+  </div>
 </div>
+
 
 <!------------------------------------------------------Carousel---------------------------------------------------->
 <!-- about -->
@@ -302,7 +309,7 @@
                     <div class="card" >
                       <img src="images\Album\IMG_1002.JPG" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text"> Inauguration Ceremony</p>
                         </div>
                     </div>
                   </div>
@@ -310,7 +317,7 @@
                     <div class="card">
                       <img src="images\Album\IMG_1070.JPG" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text">Inauguration Ceremony</p>
                         </div>
                     </div>
                   </div>  
@@ -318,7 +325,7 @@
                     <div class="card">
                       <img src="images\Album\IMG_0233.JPG" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text">Indian Dental Association</p>
                         </div>
                     </div>
                   </div>   
@@ -326,7 +333,7 @@
                     <div class="card">
                       <img src="images\Album\IMG_2641.JPG" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text">Inauguration Ceremony</p>
                         </div>
                     </div>
                   </div> 
@@ -341,7 +348,7 @@
                     <div class="card" >
                       <img src="images\Album\IMG_4269.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text">Medical Camp</p>
                         </div>
                     </div>
                   </div>
@@ -349,7 +356,7 @@
                     <div class="card">
                       <img src="images\Album\IMG_5913.JPG" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text"></p>
                         </div>
                     </div>
                   </div>  
@@ -357,7 +364,7 @@
                     <div class="card">
                       <img src="images\Album\IMG_5915.JPG" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text"></p>
                         </div>
                     </div>
                   </div>   
@@ -365,7 +372,7 @@
                     <div class="card">
                       <img src="images\Album\IMG-20190214-WA0025.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <p class="card-text">Team</p>
                         </div>
                     </div>
                   </div>                  
@@ -406,7 +413,7 @@
               about their needs, social stigma and poor financial access to special education and therapy. <a href="aboutus.html">more</a>" </p>
          </div>
         <div class="col-sm-4 foocol">
-          <h4 class="text-white fh4">Categories</h4>
+          <!-- <h4 class="text-white fh4">Categories</h4>
           <i class="text-white" > <a href="Palm Flowers.html" style="text-decoration: none; list-style:none; display:inline-block;">Palm Flowers</a></i> <br />
           <i class="text-white" > <a href="mobiles.html" style="text-decoration: none; list-style:none; display:inline-block;">Graden Flowers</a></i> <br />
           <i class="text-white" > <a href="laptops.html" style="text-decoration: none; list-style:none; display:inline-block;">Sticks</a></i> <br />
@@ -416,6 +423,7 @@
           <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">deco rose</a></i> <br />
           <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">bamboo</a></i>  <br />
           <i class="text-white" > <a href="#" style="text-decoration: none; list-style:none; display:inline-block;">Offer Zone</a></i> <br />
+        </div> -->
         </div>
         <div class="col-sm-4 foocol">
           <h4 class="text-white fh4">Contact Us</h4>
