--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,11 @@
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
+        <a class="navbar-brand" href="index.html">
+            <span id="bd-title">
+              <img src="images/Logo page.jpg" alt="Hopeshore Logo">
+            </span>
+          </a>
         <button id="menu-button">&#9776;</button> 
         <nav id="side-menu">
             <button id="close-button">X</button>
@@ -33,7 +38,6 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;max-width: fit-content;">Hopeshore</span></a>
       </nav>
       <nav class="nav2">
         <ul class="ul2">
